--- a/JavaScript/Level-3/index.html
+++ b/JavaScript/Level-3/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <!-- <script src="favorite.js"></script> -->
+<!--     <script src="Todo.js"></script> -->
 </body>
 </html>
