--- a/JavaScript/Level-4/index.html
+++ b/JavaScript/Level-4/index.html
@@ -8,5 +8,6 @@
 <body>
     <!-- <script src="script.js"></script> -->
      <script src="Game.js"></script>
+<!--     <script src="practice.js"></script> -->
 </body>
 </html>
